# a-share-mcp

./: .gitignore  CHANGELOG.md  DESIGN.md  MIGRATION.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
a_share_mcp/: __init__.py  data.py  server.py
examples/: announcement_detail_603259.request.json  batch_quotes.request.json  company_snapshot_603259.request.json  financial_trends_603259.request.json  market_overview.request.json  prompts.md  research_pack_603259.request.json
scripts/: a_share_mcp_server.py  live_smoke_v1.py  protocol_smoke.py  smoke_mcp.py  test_v030_announcements.py
tests/: test_v1_features.py
